--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "snowpack build"
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0"
+    "canvas-confetti": "^1.2.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@snowpack/plugin-typescript": "^1.2.1",
